<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <RelativeLayout
        android:id="@+id/rlShowTime"
        android:layout_width="100dp"
        android:layout_height="120dp"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:background="@drawable/background_choose_time">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/lbl_9_30_am"
            android:textColor="@color/colorTirtaryText"
            android:textSize="@dimen/text_regular_3x"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv3DFilm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/tvTime"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/lbl_3d"
            android:textColor="@color/colorTirtaryText"
            android:textSize="@dimen/text_regular_2x"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvScreen1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/tv3DFilm"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/lbl_screen_1"
            android:textColor="@color/colorTirtaryText"
            android:textSize="@dimen/text_regular_2x"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/tvScreen1"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/lbl_21_available"
            android:textColor="@color/colorTirtaryText"
            android:textSize="@dimen/text_regular_2x"/>



    </RelativeLayout>



</RelativeLayout>