<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <RelativeLayout
        android:id="@+id/rlcities"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/colorPrimary">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:text="@string/lbl_cities"
            android:textColor="@color/white"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvYangon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rlcities"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:text="@string/lbl_yangon_city"
        android:textColor="@color/white"
        android:textSize="@dimen/text_regular_2x" />

    <RelativeLayout
        android:id="@+id/rlBorderLine"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:layout_below="@id/tvYangon"
        android:background="@color/white"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvMandalay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rlBorderLine"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:text="@string/lbl_mandalay_city"
        android:textColor="@color/white"
        android:textSize="@dimen/text_regular_2x" />

    <RelativeLayout
        android:id="@+id/rlBorderLine2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/tvMandalay"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:background="@color/white"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvNaypyidaw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rlBorderLine2"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:text="@string/lbl_naypyidaw_city"
        android:textColor="@color/white"
        android:textSize="@dimen/text_regular_2x"/>

    <RelativeLayout
        android:id="@+id/rlBorderLine3"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:layout_below="@id/tvNaypyidaw"
        android:background="@color/white"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvBago"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:layout_below="@id/rlBorderLine3"
        android:text="@string/lbl_bago_city"
        android:textColor="@color/white"
        android:textSize="@dimen/text_regular_2x"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:layout_below="@id/tvBago"
        android:background="@color/white"/>


</RelativeLayout>